--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <head>
         <title>Blog App</title>
         <link rel="stylesheet"  type="/text/css"  herf ="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css">
-        <link rel="stylesheet" type="/text/css" href="/stylesheet/app.css">
+        <link rel="stylesheet" type="/text/css" href="/public/stylesheet/app.css">
     </head>
     <body>
         <div class="ui fixed inverted menu">
