--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -4,9 +4,9 @@
 
 <% blogs.forEach(function(blog){ %>
     <div>
-        <h2><%= blog.title %></h2>
+        <h2><%=blog.title%></h2>
         <img src="<%= blog.image %>" >
-        <span><%= blog.create %></span>
+        <span><%= blog.created %></span>
         <p><%= blog.body %></p>
         <a href="/blogs/<%._id%>">Read More</a>
     </div>
