--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include partials/header %>
 <h1>Index page</h1>
 
 <% blogs.forEach(function(blog){ %>
@@ -13,4 +13,4 @@
 
 <% });  %>
 
-<% include ./partials/footer %>
+<% include partials/footer %>
