--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,7 +1,11 @@
-i.icon {
-    font-size: 2em;
+i.icon{
+	font-size: 2em;
 }
 
 .container.main{
-    margin: 7em;
+	margin-top: 7em;
 }
+
+#delete {
+	display: inline;
+}s
