--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Blog App</title>
-        <link rel="stylesheet"  type="text/css"  herf ="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheet/app.css">
+        <link rel="stylesheet" herf ="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css">
+        <link rel="stylesheet" href="/stylesheet/app.css">
     </head>
     <body>
         <div class="ui fixed inverted menu">
